style.css
@import url('https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap');

:root {
    --main-colour: rgba(251, 248, 241);
    --secondary-colour: rgba(66, 95, 87);
    --tertiary-colour: rgba(206, 229, 208, 0.3);
}

/* 
****************************************************************
Main Styling - Start - All Devices
****************************************************************
*/

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Zen Loop', cursive;
    color: black;
    background-color: var(--main-colour);
    font-size: 1.8rem;
    letter-spacing: 2px;
    font-weight: bold;
}

h1,
h2 {
    font-weight: bold;
}

.cursive-text {
    font-family: 'Oooh Baby', cursive;
}

.reveal {
    position: relative;
    transform: translateY(150px);
    opacity: 0;
    transition: all 2s;
}

.reveal.activeScroll {
    transform: translateY(0px);
    opacity: 1;
}

/* 
****************************************************************
Main Styling - End - All Devices
****************************************************************
*/

/* 
****************************************************************
                Headings - Start - All Devices
****************************************************************
*/

#headingTitle {
    font-family: 'Oooh Baby', cursive;
    text-align: center;
    font-size: 3rem;
    padding-top: 5rem;
    padding-bottom: 5rem;
}

.smaller-heading-title {
    font-family: 'Oooh Baby', cursive;
    text-align: center;
    padding-top: 2rem;
    padding-bottom: 2rem;
}

/* 
****************************************************************
                Headings - End - All Devices
****************************************************************
*/

/* 
****************************************************************
                Nav Bar- Start - All Devices
****************************************************************
*/

.navbar {
    background-color: var(--secondary-colour);
    letter-spacing: 0.1rem;
}

.navbar-brand {
    font-size: 3rem;
    padding-left: 0.5rem;
    padding-right: 2rem;
    color: var(--main-colour);
    margin-top: -1.5rem;
    font-weight: 400;
}

.navbar-brand-bigger-letter {
    font-size: 4.5rem;
}

.navbar-toggler {
    margin-right: 1rem;
    margin-bottom: 1rem;
    font-size: 1.5rem;
    border-color: var(--main-colour);
}

.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
    outline: none;
    border: 2px solid var(--main-colour);
    box-shadow: none;
}

.fa-bars {
    color: var(--main-colour);
}

.slogan {
    font-size: 2rem;
    text-align: right;
    margin-top: -2rem;
}

.navbar-nav {
    text-transform: uppercase;
}

.nav-item {
    padding-right: 5rem;
    padding-left: 1rem;
}

.nav-link {
    color: var(--main-colour);
    font-weight: 500;
}

.nav-link:hover {
    color: var(--main-colour);
    font-weight: bold;
}

.active {
    font-weight: 900;
}

.dropdown-menu {
    background-color: var(--secondary-colour);
}

.dropdown-item {
    color: var(--main-colour);
}

.dropdown-item:hover {
    background-color: var(--main-colour);
    font-weight: bold;
}

/* 
****************************************************************
                Nav Bar- End - All Devices
****************************************************************
*/

/* 
****************************************************************
                Hero Image- Start - All Devices (????)
****************************************************************
*/

.carousel-container {
    height: 75vh;
    background-color: var(--secondary-colour);
}

.masthead-one {
    min-height: 75vh;
    background-image: url('/assets/website-images/website-logo.png');
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    position: relative;
    color: var(--main-colour);
}

.overlay-one {
    position: absolute;
    width: max-content;
    background-color: var(--tertiary-colour);;
    padding: 2rem;
    top: 66%;
    left: 20%;
    background-attachment: fixed;
}

@media (max-width: 768px) {
    .carousel-container {
        height: 33vh;
    }

    .masthead-one {
        min-height: 33vh;
        background-size: contain;
    }
}

.fa-chevron-left {
    color: var(--tertiary-colour);
    margin-right: 5rem;
}

.fa-chevron-right {
    color: var(--tertiary-colour);
    margin-left: 5rem;
}

.fa-chevron-left:hover{
    font-weight: bold;
}

.fa-chevron-right:hover{
    font-weight: bold;
}


/* **************************************************************** Hero Image- End - All Devices (????) **************************************************************** */ /* **************************************************************** About Me - Start - All Devices **************************************************************** */ .about-me-paragraph-containers {
    background-color: var(--tertiary-colour);
    padding-top: 2rem;
    padding-bottom: 2rem;
    margin-bottom: 2rem;


/* 
****************************************************************
                About Me - End - All Devices
****************************************************************
*/

/* 
****************************************************************
                Massage - Start - All Devices????
****************************************************************
*/

.massage-info {
    text-align: center;
}

.btm-about-me-img {
    height: 100vh;
    background-image: url('assets/website-images/stock-massage-img.jpg');
    position: relative;
    background-position: center;
    background-size: cover;
    background-color: var(--main-colour);
}

.btm-about-me-img-blend {
    position: absolute;
    width: 100%;
    height: 100%;
    background-image: linear-gradient(to bottom, rgba(251, 248, 241, 1), rgba(251, 248, 241, 0));
}

.cards-container {
    width: 100%;
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.cards {
    background-color: var(--tertiary-colour);
    margin: 2rem;
    padding: 4rem;
    text-align: center;
}

.cards > h1 {
    text-transform: uppercase;
}

.address-card-container {
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.address-card {
    background-color: var(--tertiary-colour);
    margin: 2rem;
    padding: 2rem;
    text-align: center;
}

/* 
****************************************************************
                Massage - End - All Devices????+
****************************************************************
*/

